@@ -51,6 +51,40 @@ class TestScanner(unittest.TestCase):
         self.assertEqual(test.registrations[5]['ob'], inst2)
         self.assertEqual(test.registrations[5]['instance'], True)
 
+    def test_package_with_orphaned_pyc_file(self):
+        # There is a module2.pyc file in the "pycfixtures" package; it
+        # has no corresponding .py source file.  Such orphaned .pyc
+        # files should be ignored during scanning.
+        from venusian.tests import pycfixtures
+        class Test(object):
+            def __init__(self):
+                self.registrations = []
+            def __call__(self, **kw):
+                self.registrations.append(kw)
+        test = Test()
+        scanner = self._makeOne(test=test)
+        scanner.scan(pycfixtures)
+        self.assertEqual(len(test.registrations), 3)
+        test.registrations.sort(
+            lambda x, y: cmp((x['name'], x['ob'].__module__),
+                             (y['name'], y['ob'].__module__))
+            )
+        from venusian.tests.pycfixtures.module import function as func1
+        from venusian.tests.pycfixtures.module import inst as inst1
+        from venusian.tests.pycfixtures.module import Class as Class1
+
+        self.assertEqual(test.registrations[0]['name'], 'Class')
+        self.assertEqual(test.registrations[0]['ob'], Class1)
+        self.assertEqual(test.registrations[0]['method'], True)
+
+        self.assertEqual(test.registrations[1]['name'], 'function')
+        self.assertEqual(test.registrations[1]['ob'], func1)
+        self.assertEqual(test.registrations[1]['function'], True)
+
+        self.assertEqual(test.registrations[2]['name'], 'inst')
+        self.assertEqual(test.registrations[2]['ob'], inst1)
+        self.assertEqual(test.registrations[2]['instance'], True)
+
     def test_module(self):
         from venusian.tests.fixtures import module
         class Test(object):
